--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -6,6 +6,9 @@
   cursor: pointer;
   display: inline-block;
   line-height: 1;
+
+  font-size: 1rem;
+  padding: 1rem 2rem;
 }
 .storybook-button--primary {
   color: white;
@@ -15,16 +18,4 @@
   color: #333;
   background-color: transparent;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
-}
-.storybook-button--small {
-  font-size: 12px;
-  padding: 10px 16px;
-}
-.storybook-button--medium {
-  font-size: 14px;
-  padding: 11px 20px;
-}
-.storybook-button--large {
-  font-size: 16px;
-  padding: 12px 24px;
 }
